--- a/industry-project-ecommerce/package.json
+++ b/industry-project-ecommerce/package.json
@@ -13,9 +13,10 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
-    "jotai": "^2.11.1",
+    "jotai": "^2.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "seamless-immutable": "^7.1.4",
     "wouter": "^3.3.5"
   },
   "devDependencies": {
