--- a/industry-project-ecommerce/package.json
+++ b/industry-project-ecommerce/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
+    "formik": "^2.4.6",
     "jotai": "^2.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
