--- a/industry-project-ecommerce/package.json
+++ b/industry-project-ecommerce/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "seamless-immutable": "^7.1.4",
-    "wouter": "^3.3.5"
+    "wouter": "^3.3.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
